solved the pipeline issue